fixing overflow div contain

--- a/angular4/anhLe/src/home/home.css
+++ b/angular4/anhLe/src/home/home.css
@@ -210,6 +210,24 @@
 
 }
 
+@media only screen and (max-width: 800px) {
+	#skills {
+		background-image: linear-gradient(
+				rgba(20, 20, 20, 0.7),
+				rgba(20, 20, 20, 0.7)),
+		url("../assets/images/md/skills.png");
+	}
+}
+
+@media only screen and (max-width: 500px) {
+	#skills {
+		background-image: linear-gradient(
+				rgba(20, 20, 20, 0.7),
+				rgba(20, 20, 20, 0.7)),
+		url("../assets/images/sm/skills.png");
+	}
+}
+
 
 #skills div h4 {
 	display: inline-block;
